--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +20,24 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.header{
+  position: sticky;
+}
+
+.products{
+  min-height: 100vh;
+}
+.services{
+  min-height: 100vh;
+}
+
+
+
+html,body{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding:0;
+  overflow-x: hidden;
 }
